# thelab-db

./: .gitignore  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
docs/: .pages  index.md  styles.css
docs/api/: fields.md  index.md  middleware.md  pgviews.md
docs/fields/: fernet.md  index.md
docs/guides/: fernet.md  index.md  middleware.md  pgviews.md
docs/pgviews/: .pages  index.md
thelabdb/: __init__.py  apps.py  middleware.py  result.py
thelabdb/fields/: __init__.py  char.py  fernet.py  hkdf.py  pydantic.py
thelabdb/pgviews/: apps.py  migrate.py  models.py  signals.py  view.py
thelabdb/pgviews/db/: __init__.py
thelabdb/pgviews/db/sql/: compiler.py  query.py
thelabdb/pgviews/management/commands/: clear_pgviews.py  sync_pgviews.py
thelabdb/tests/: models.py  test_fernet_fields.py  test_pgviews.py
thelabdb/tests/settings/: base.py  docgen_setup.py  pg.py  sqlite.py
thelabdb/tests/testspg/: apps.py  models.py  test_migrate.py  test_pgviews.py
thelabdb/tests/testspg/migrations/: 0001_initial.py
thelabdb/tests/testsuniv/: apps.py  models.py  test_char_fields.py  test_fernet_fields.py  test_middleware.py  test_newtype_fields.py  test_pydantic_field.py
thelabdb/tests/testsuniv/migrations/: 0001_initial.py  0002_product.py  0003_store_inventory.py  0004_nullchar_uppercasechar.py
