[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "thelabdb"
version = "0.4.0"
description = "Django DB Utilities"
authors = ["thelab <thelabdev@thelab.co>"]
license = "ISC"
readme = "README.md"
homepage = "https://gitlab.com/thelabnyc/thelab-db"
repository = "https://gitlab.com/thelabnyc/thelab-db"
documentation = "https://thelabnyc.gitlab.io/thelab-db"
packages = [
    { include = "thelabdb" },
]

[tool.poetry.dependencies]
python = "^3.13"
Django = ">=4.2.0"
cryptography = ">=44.0.2"
django-stubs-ext = "^5.1.3"
pydantic = "^2.10.6"
thelab-typing = "^0.1.0-beta.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
coverage = "^7.7.0"
tox = "^4.24.2"
psycopg = {extras = ["binary"], version = "^3.2.6"}
mypy = "^1.15.0"
django-stubs = "^5.1.3"
types-cryptography = "^3.3.23.2"
types-psycopg2 = "^2.9.21.20241019"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
pymdown-extensions = "^10.14.3"
mkdocs-material = "^9.6.9"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-section-index = "^0.3.9"
mkdocs-pagenav-generator = {git = "https://github.com/Andre601/mkdocs-pagenav-generator", rev = "acb5b1561695e8f69d67fda029779f40e4b0beef"}
mkautodoc = "^0.2.0"

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]

# Strict mode, see mypy --help
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[tool.django-stubs]
django_settings_module = "thelabdb.tests.settings.pg"

[tool.isort]
profile = "black"
from_first = true

[tool.coverage.run]
branch = true
source_pkgs = ["thelabdb"]
omit = ["thelabdb/tests/**/*py"]

[tool.coverage.report]
show_missing = true
ignore_errors = true

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "poetry"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]
