[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thelabdb"
version = "0.6.1"
description = "Django DB Utilities"
readme = "README.md"
dependencies = [
    "Django (>=4.2.0)",
    "cryptography (>=46.0.3)",
    "django-stubs-ext (>=5.2.8,<6)",
    "pydantic (>=2.12.5,<3)",
    "thelab-typing (>=0.2.0,<2.0.0)",
]
requires-python = ">=3.13"

[project.license]
text = "ISC"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/thelab-db"
Repository = "https://gitlab.com/thelabnyc/thelab-db"
Documentation = "https://thelabnyc.gitlab.io/thelab-db"

[dependency-groups]
dev = [
    "ruff (>=0.14.9)",
    "coverage (==7.13.0)",
    "tox (>=4.32.0)",
    "psycopg[binary] (==3.3.2)",
    "mypy (==1.19.0)",
    "django-stubs (==5.2.8)",
    "types-cryptography (>=3.3.23.2,<4)",
    "types-psycopg2 (>=2.9.21.20251012,<3)",
    "tox-uv (>=1.29.0)",
    "mkdocs (>=1.6.1,<2)",
    "pymdown-extensions (>=10.19,<11)",
    "mkdocs-material (>=9.7.0,<10)",
    "mkdocs-awesome-pages-plugin (>=2.10.1,<3)",
    "mkdocs-section-index (>=0.3.10,<0.4)",
    "mkdocs-pagenav-generator @ git+https://github.com/Andre601/mkdocs-pagenav-generator@acb5b1561695e8f69d67fda029779f40e4b0beef",
    "mkautodoc (>=0.2.0,<0.3)",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["thelabdb"]

[[tool.uv.index]]
name = "thelabnyc"
url = "https://gitlab.com/api/v4/groups/269576/-/packages/pypi/simple"
explicit = true

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]

# Strict mode, see mypy --help
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[tool.django-stubs]
django_settings_module = "thelabdb.tests.settings.pg"

[tool.isort]
profile = "black"
from_first = true

[tool.ruff.lint.isort]
from-first = true

[tool.coverage.run]
branch = true
source_pkgs = ["thelabdb"]
omit = ["thelabdb/tests/**/*py"]

[tool.coverage.report]
show_missing = true
ignore_errors = true


[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = ["pyproject.toml:version"]
pre_bump_hooks = ["pre-commit run --all-files || true"]
post_bump_hooks = ["git push origin master $CZ_POST_CURRENT_TAG_VERSION"]
